# galvanic-assert

./: Cargo.toml  Readme.md  build.rs
src/: lib.rs
src/matchers/: collection.rs  combinators.rs  core.rs  fs.rs  mod.rs  variant.rs
tests/: collections_matchers.rs  combinator_matchers.rs  core_matchers.rs  expectations.rs  fs_matchers.rs  variant_matchers.rs
