[package]
name = "galvanic-assert"
version = "0.5.1"
authors = ["Christopher Bacher <mindsbackyard@gmail.com>"]

description = """A comprehensive set of matcher-based assertions for easier testing.

Support for checking properties of numbers, objects, enum variants, collections, panics, and more.
It is easy to write your own assertions.
Part of the galvanic test framework. (in development)
Can also be used with another test framework of your choice."""

homepage = "https://github.com/mindsbackyard/galvanic-assert"
repository = "https://github.com/mindsbackyard/galvanic-assert"
documentation = "https://docs.rs/galvanic-assert"

readme = "Readme.md"

license = "Apache-2.0"

keywords = ["test", "assert", "matching", "fluent"]
categories = ["development-tools::testing"]

[dependencies]

[badges]
travis-ci = { repository = "mindsbackyard/galvanic-assert" }
