[package]
name = "galvanic-assert"
version = "0.7.0"
authors = ["Christopher Bacher <mindsbackyard@gmail.com>"]

description = """A comprehensive set of matcher-based assertions and expectations for easier testing.

Support for checking properties of numbers, objects, enum variants, collections, panics, and more.
It is also easy to write your own assertions.
This crate will be part of the galvanic test framework (in development).
You can also use the assertions in another test framework of your choice.
Works on: stable, beta, and nightly"""

homepage = "https://github.com/mindsbackyard/galvanic-assert"
repository = "https://github.com/mindsbackyard/galvanic-assert"
documentation = "https://docs.rs/galvanic-assert"

readme = "Readme.md"

license = "Apache-2.0"

keywords = ["test", "assert", "matching", "fluent", "hamcrest"]
categories = ["development-tools::testing"]

[dependencies]

[badges]
travis-ci = { repository = "mindsbackyard/galvanic-assert" }
